migrate to jaylib-ffm, fix bullet rotation, up number of asteroids and enemies, general import/requires cleanup. TODO: simplify 3d models for better performance (especially enemies)